src/usecase/tui/snapshots/fzf_make__usecase__tui__scenario_test__make_additional_arguments_popup_opened.snap
---
source: src/usecase/tui/scenario_test.rs
expression: screen
---
"┌ ✨ Preview ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(3, " ")]
"│    1 .PHONY: run                                                                                                     │"
"│    2 run:                                                                                                            │"
"│    3     echo "run"                                                                                                  │"
"│    4                                                                                                                 │"
"│    5 .PHONY: run-with-args                                                                                           │"
"│    6 run-with-args:                                                                                                  │"
"│    7     echo $(ARG1); echo $(ARG2)                                                                                  │"
"│    8                                                                                                                 │"
"│    9 .PHONY: run-with-arg                                                                                            │"
"│   10 run-with-arg:                                                                                                   │"
"│   11     echo $(ARG1)                                                                                                │"
"│   12                                                                                                                 │"
"│   13 include ./makefiles/test.mk                                                                                     │"
"│   14                  ┏ 👋 Pass additional arguments to `make run-with-args`━━━━━━━━━━━━━━━━━┓                       │" Hidden by multi-width symbols: [(27, " ")]
"│   15 .PHONY: cmd      ┃                                                                      ┃                       │"
"│   16 cmd:             ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛                       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ 📢 Commands ─────────────────────────────────────────────┐┌ 📚 History ──────────────────────────────────────────────┐" Hidden by multi-width symbols: [(3, " "), (63, " ")]
"│  > make run-with-args                                    ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"┌ 🔍 Search ───────────────────────────────────────────────┐                                                            " Hidden by multi-width symbols: [(3, " ")]
"│  with-args                                               │                                                            "
"└──────────────────────────────────────────────────────────┘ vX.Y.Z "
"  Execute the selected command: <enter> | Passing additional arguments: (type any character) | Close the popup window:  "
