src/usecase/tui/snapshots/fzf_make__usecase__tui__scenario_test__make_narrowing_down_matches_nothing.snap
---
source: src/usecase/tui/scenario_test.rs
expression: screen
---
"┏ ✨ Preview ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓" Hidden by multi-width symbols: [(3, " ")]
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┏ 📢 Commands ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ 📚 History ──────────────────────────────────────────────┐" Hidden by multi-width symbols: [(3, " "), (63, " ")]
"┃                                                          ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────┘"
"┏ 🔍 Search ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓                                                            " Hidden by multi-width symbols: [(3, " ")]
"┃  nosuchcommand                                           ┃                                                            "
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛ vX.Y.Z "
"  Execute the selected command: <enter> | Select command: ↑(<c-p>)/↓(<c-n>) | Narrow down command: (type any            "
