src/usecase/tui/snapshots/fzf_make__usecase__tui__scenario_test__make_preview_of_an_included_target.snap
---
source: src/usecase/tui/scenario_test.rs
expression: screen
---
"┏ ✨ Preview ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓" Hidden by multi-width symbols: [(3, " ")]
"┃    1 .PHONY: target-included                                                                                         ┃"
"┃    2 target-included:                                                                                                ┃"
"┃    3     @echo "target-included"                                                                                     ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┏ 📢 Commands ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ 📚 History ──────────────────────────────────────────────┐" Hidden by multi-width symbols: [(3, " "), (63, " ")]
"┃  > make target-included                                  ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────┘"
"┏ 🔍 Search ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓                                                            " Hidden by multi-width symbols: [(3, " ")]
"┃  included                                                ┃                                                            "
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛ vX.Y.Z "
"  Execute the selected command: <enter> | Select command: ↑(<c-p>)/↓(<c-n>) | Narrow down command: (type any            "
